# HAverager

./: .gitignore  Makefile.am  README.md  average-config.in  configure.ac  doxygen.cfg  iniAverager
doc/manual/: Bibliography.tex  Examples.tex  Introduction.tex  Makefile  Method.tex  Program.tex  Python.tex  manual.tex
include/: common.inc  data.inc  settings.inc
num_utils/: Makefile.am  mydsyevd.f
scripts/: AvePlot.py  AveUtils.py  ConvertCSVtoDat.py  ConvertDattoCSV.py  CorrModel.py  DataReader.py  DatasetGen.py  PyAverager.py  plotAve.py
source/: Makefile.am  average_py.f90  averager.f  averaging.f  common_tools.f  covartonui.f  error_logging.f  fillarrays.f  initave.f  output.f  readdata.f  statrecalc.f  toblockdiag.f
test/: DataReader.py  DatasetGen.py  README.md  ZptBlueCov.txt  ZptBlueOut.txt  covar.in  steering  test.py  test2.py  testBlue.py  testClosure.py
test/Blas/: test.py
test/Blue/: README  ZptBlueCov.txt  ZptBlueOut.txt  myBLUEZptTest.cxx  myBLUEZptTest.inp  testBlue.py
test/Closure/: test.py
test/ZY/: steering  test.py
test/Zpt/: ZeePtBornNorm.csv  ZmumuPtBornNorm.csv  steeringZpt  test.py
